--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,16 +1,27 @@
 <h1>Cadastro das visitas:</h1>
 
-{{#each visitas}}
-  <h2>{{nome}}</h2>
-  <p>Email: {{email}}</p>
-  <p>Celular: {{numeroCelular}}</p>
-  {{!-- <p>CPF: {{cpf}}</p> --}}
-  <p>Animal: {{animal}}</p>
-  <p>Data: {{dataVisita}}</p>
-  <p>Hora: {{horaVisita}}</p>
+<form action="/buscar" method="GET">
+  <input type="text" name="q" placeholder="Buscar por nome ou CPF" value="{{query}}">
+  <button type="submit">Buscar</button>
+</form>
 
-  <a href="/editar/{{id}}"><button>Atualizar</button></a>
-  <a href="/deletar/{{id}}"><button>Deletar</button></a>
+<hr>
 
-  <hr>
-{{/each}}
+{{#if visitas.length}}
+  {{#each visitas}}
+    <h2>{{nome}}</h2>
+    <p>Email: {{email}}</p>
+    <p>Celular: {{numeroCelular}}</p>
+    {{!-- <p>CPF: {{cpf}}</p> --}}
+    <p>Animal: {{animal}}</p>
+    <p>Data: {{dataVisita}}</p>
+    <p>Hora: {{horaVisita}}</p>
+
+    <a href="/editar/{{id}}"><button>Atualizar</button></a>
+    <a href="/deletar/{{id}}"><button>Deletar</button></a>
+
+    <hr>
+  {{/each}}
+{{else}}
+  <p><strong>Nenhum resultado encontrado.</strong></p>
+{{/if}}
