alteração do cpf comentado para descomentado

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,7 +12,7 @@
     <h2>{{nome}}</h2>
     <p>Email: {{email}}</p>
     <p>Celular: {{numeroCelular}}</p>
-    {{!-- <p>CPF: {{cpf}}</p> --}}
+    <p>CPF: {{cpf}}</p>
     <p>Animal: {{animal}}</p>
     <p>Data: {{dataVisita}}</p>
     <p>Hora: {{horaVisita}}</p>
